--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LUDO NO MERCY</title>
 <!-- Google AdSense verification (put in <head>) -->
-<script async
-  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=YOUR_CLIENT_ID"
-  crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4182657626572583"
+     crossorigin="anonymous"></script>
 
 <style>
     :root {
@@ -130,7 +129,7 @@
 <div class="ad-holder" style="text-align:center; margin:8px 0; max-width:980px;">
   <ins class="adsbygoogle" 
        style="display:block"
-       data-ad-client="YOUR_CLIENT_ID"
+       data-ad-client="ca-pub-4182657626572583"
        data-ad-slot="1111111111"
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
@@ -684,7 +683,7 @@ initGame();
 <div class="ad-holder" style="text-align:center; margin:10px 0; max-width:980px;">
   <ins class="adsbygoogle" 
        style="display:block"
-       data-ad-client="YOUR_CLIENT_ID"
+       data-ad-client="ca-pub-4182657626572583"
        data-ad-slot="2222222222"
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
